@@ -496,10 +496,19 @@ class Request(BaseRequest, DeprecatedRequestMethods):
 
 
 def route_request_iface(name, bases=()):
-    iface = InterfaceClass('%s_IRequest' % name, bases=bases)
+    # zope.interface treats the __name__ as the __doc__ and changes __name__
+    # to None for interfaces that contain spaces if you do not pass a
+    # nonempty __doc__ (insane); see
+    # zope.interface.interface.Element.__init__ and
+    # https://github.com/Pylons/pyramid/issues/232; as a result, always pass
+    # __doc__ to the InterfaceClass constructor.
+    iface = InterfaceClass('%s_IRequest' % name, bases=bases,
+                           __doc__="route_request_iface-generated interface")
     # for exception view lookups
-    iface.combined = InterfaceClass('%s_combined_IRequest' % name,
-                                    bases=(iface, IRequest))
+    iface.combined = InterfaceClass(
+        '%s_combined_IRequest' % name,
+        bases=(iface, IRequest),
+        __doc__ = 'route_request_iface-generated combined interface')
     return iface
 
 def add_global_response_headers(request, headerlist):
